--- a/packages/solid-ring-ui/src/Components/Badge/Badge.module.scss
+++ b/packages/solid-ring-ui/src/Components/Badge/Badge.module.scss
@@ -1,6 +1,43 @@
-$size: 2rem;
+@import "../../Global/variables";
+@import "../../Global/global";
 
 .badge {
-  font-family: sans-serif;
-  font-size: $size;
+  display: inline-block;
+
+  box-sizing: border-box;
+  height: 20px;
+  padding: 0 $unit;
+
+  cursor: default;
+
+  vertical-align: baseline;
+
+  color: var(--ring-secondary-color);
+  border: 1px var(--ring-line-color) solid;
+  border-radius: var(--ring-border-radius);
+  background-color: var(--ring-content-background-color);
+
+  font-size: var(--ring-font-size-smaller);
+  font-weight: normal;
+  font-style: normal;
+  line-height: 17px;
+
+  &.gray {
+    color: var(--ring-text-color);
+    background-color: var(--ring-tag-background-color);
+  }
+
+  &.valid {
+    color: var(--ring-success-color);
+  }
+
+  &.invalid {
+    color: var(--ring-error-color);
+  }
+
+  &.disabled {
+    /* Deprecated: duplicates invalid */
+
+    color: var(--ring-error-color);
+  }
 }
